--- a/src/Ball.css
+++ b/src/Ball.css
@@ -1,5 +1,5 @@
 .Ball {
-  background-color: tomato;
+  background-color: blue;
   border-radius: 50%;
   color: white;
   display: inline-block;
@@ -10,4 +10,5 @@
   margin-right: 0.5em;
   font-weight: bold;
   font-size: 1.5em;
+  border: 2px solid black;
 }
